# kanbanTracker

./: .gitignore  Dockerfile  kanbanTracker.cabal
Model/: Story.hs
src/: Main.hs
